fix spacing on homepage

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -26,7 +26,7 @@ color:#611427;
 .pages {
   position:relative;
   display:inline-block;
-  padding:20px 50px 0px 50px;
+  padding:20px 40px 0px 40px;
   border-radius: 10px 10px 0 0;
   margin:5px 200px 0px 200px;
   border-color:#374140;
